ajustes nas telas de carrinho e produtos

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -59,7 +59,7 @@
                 <div class="single category">
                   <h3 class="side-title">Categorias</h3>
                   <ul class="list-group">
-                    <li><a href="/frontend/produtos.html" title="">Hortifruti Orgânico <span class="pull-right">30</span></a></li>
+                    <li><a href="produtos.html" title="">Hortifruti Orgânico <span class="pull-right">30</span></a></li>
                     <li><a href="" title="">Mercearia Orgânica <span class="pull-right">13</span></a></li>
                     <li><a href="" title="">Bebidas Orgânicas <span class="pull-right">13</span></a></li>
                     <li><a href="" title="">Congelados Orgânicos <span class="pull-right">13</span></a></li>
@@ -164,7 +164,7 @@
                                             <p class="card-text offs-text-name text-monospace">Caqui Fuyu Orgânico</p>
                                             <div class="card-text text-muted"><s>De: R$ 19,99</s> por:</div>
                                             <h5 class="text-success mb-2"><b>R$ 16,99</b><small> à vista</small></h5>
-                                            <button class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Continuar</button>
+                                            <button class="btn cor-bg-teal  text-white w-100 mb-2">Continuar</button>
                                           </div>
                                         </div>
 
@@ -178,7 +178,7 @@
                                             <p class="card-text offs-text-name text-monospace">Cenoura DeBruin Orgânica</p>
                                             <div class="card-text text-muted"><s>De: R$ 4,99</s> por:</div>
                                             <h5 class="text-success mb-2"><b>R$ 3,99</b> <small> à vista</small></h5>
-                                            <button class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Continuar</button>
+                                            <button class="btn cor-bg-teal  text-white w-100 mb-2">Continuar</button>
                                           </div>
                                         </div>
                                     </div>
@@ -191,7 +191,7 @@
                                             <p class="card-text offs-text-name text-monospace">Cebola Chooury Orgânica</p>
                                             <div class="card-text text-muted"><s>De: R$ 6,29</s> por:</div>
                                             <h5 class="text-success mb-2"><b>R$ 5,99</b> <small> à vista</small></h5>
-                                            <button class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Continuar</button>
+                                            <button class="btn cor-bg-teal  text-white w-100 mb-2">Continuar</button>
                                           </div>
                                         </div>
                                     </div>
@@ -210,7 +210,7 @@
                                           <p class="card-text offs-text-name text-monospace">Pimentão Restib Orgânico</p>
                                             <div class="card-text text-muted"><s>De: R$ 3,59</s> por:</div>
                                             <h5 class="text-success mb-2"><b>R$ 2,99</b> <small> à vista</small></h5>
-                                            <button class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Continuar</button>
+                                            <button class="btn cor-bg-teal  text-white w-100 mb-2">Continuar</button>
                                         </div>
                                       </div>
                                   </div>
@@ -223,7 +223,7 @@
                                         <p class="card-text offs-text-name text-monospace">Laranja Umbigo Orgânica</p>
                                             <div class="card-text text-muted"><s>De: R$ 35,99</s> por:</div>
                                             <h5 class="text-success mb-2"><b>R$ 33,99</b> <small> à vista</small></h5>
-                                            <button class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Continuar</button>
+                                            <button class="btn cor-bg-teal  text-white w-100 mb-2">Continuar</button>
                                       </div>
                                     </div>
                                 </div>
@@ -236,7 +236,7 @@
                                       <p class="card-text offs-text-name text-monospace">Repolho Verde Orgânico</p>
                                       <div class="card-text text-muted"><s>De: R$ 7,99</s> por:</div>
                                       <h5 class="text-success mb-2"><b>R$ 7,35</b> <small> à vista</small></h5>
-                                      <button class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Continuar</button>
+                                      <button class="btn cor-bg-teal  text-white w-100 mb-2">Continuar</button>
                                     </div>
                                   </div>
                               </div>
@@ -255,7 +255,7 @@
                                             <p class="card-text offs-text-name text-monospace">Tomate Orgânico</p>
                                             <div class="card-text text-muted"><s>De: R$ 6,99</s> por:</div>
                                             <h5 class="text-success mb-2"><b>R$ R$ 6,29</b> <small> à vista</small></h5>
-                                            <button class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Continuar</button>
+                                            <button class="btn cor-bg-teal  text-white w-100 mb-2">Continuar</button>
                                           </div>
                                         </div>
                                     </div>
@@ -268,7 +268,7 @@
                                           <p class="card-text offs-text-name text-monospace">Batata Orgânica</p>
                                           <div class="card-text text-muted"><s>De: R$ 6,99</s> por:</div>
                                           <h5 class="text-success mb-2"><b>R$ R$ 5,69</b> <small> à vista</small></h5>
-                                          <button class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Continuar</button>
+                                          <button class="btn cor-bg-teal  text-white w-100 mb-2">Continuar</button>
                                         </div>
                                       </div>
                                     </div>
@@ -281,7 +281,7 @@
                                             <p class="card-text offs-text-name text-monospace">Banana da Prata</p>
                                             <div class="card-text text-muted"><s>De: R$ 9,99</s> por:</div>
                                             <h5 class="text-success mb-2"><b>R$ 8,99</b> <small> à vista</small></h5>
-                                            <button class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Continuar</button>
+                                            <button class="btn cor-bg-teal  text-white w-100 mb-2">Continuar</button>
                                           </div>
                                         </div>
                                     </div>
@@ -309,7 +309,7 @@
                 <p class="card-text offs-text-name text-monospace">Batatas</p>
                 <h5 class="text-success mb-2"><b>R$ 8,99</b> <small> à vista</small></h5>
                 <div class="btn-group" role="group" aria-label="Exemplo básico">
-                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2 mr-2">Comprar</button>
+                  <button type="button" class="btn cor-bg-teal text-white w-100 mb-2 mr-2">Comprar</button>
                   <button type="button" class="btn cor-bg-teal font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos1', 'sub');">-</button>
                   <input id="btnMaisVendidos1" type="number" class="form-control text-center w-25" value="1">
                   <button type="button" class="btn cor-bg-teal font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos1', 'sum');">+</button>
@@ -323,7 +323,7 @@
                 <p class="card-text offs-text-name text-monospace">Batatas</p>
                 <h5 class="text-success mb-2"><b>R$ 8,99</b> <small> à vista</small></h5>
                 <div class="btn-group" role="group" aria-label="Exemplo básico">
-                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2 mr-2">Comprar</button>
+                  <button type="button" class="btn cor-bg-teal text-white w-100 mb-2 mr-2">Comprar</button>
                   <button type="button" class="btn cor-bg-teal font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos2', 'sub');">-</button>
                   <input id="btnMaisVendidos2" type="number" class="form-control text-center w-25" value="1">
                   <button type="button" class="btn cor-bg-teal font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos2', 'sum');">+</button>
@@ -337,7 +337,7 @@
               <p class="card-text offs-text-name text-monospace">Batatas</p>
               <h5 class="text-success mb-2"><b>R$ 8,99</b> <small> à vista</small></h5>
               <div class="btn-group" role="group" aria-label="Exemplo básico">
-                <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2 mr-2">Comprar</button>
+                <button type="button" class="btn cor-bg-teal text-white w-100 mb-2 mr-2">Comprar</button>
                 <button type="button" class="btn cor-bg-teal font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos3', 'sub');">-</button>
                 <input id="btnMaisVendidos3" type="number" class="form-control text-center w-25" value="1">
                 <button type="button" class="btn cor-bg-teal font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos3', 'sum');">+</button>
@@ -351,7 +351,7 @@
                 <p class="card-text offs-text-name text-monospace">Cebolas</p>
                 <h5 class="text-success mb-2"><b>R$ 9,99</b> <small> à vista</small></h5>
                 <div class="btn-group" role="group" aria-label="Exemplo básico">
-                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2 mr-2">Comprar</button>
+                  <button type="button" class="btn cor-bg-teal text-white w-100 mb-2 mr-2">Comprar</button>
                   <button type="button" class="btn cor-bg-teal font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos4', 'sub');">-</button>
                   <input id="btnMaisVendidos4" type="number" class="form-control text-center w-25" value="1">
                   <button type="button" class="btn cor-bg-teal font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos4', 'sum');">+</button>
@@ -365,7 +365,7 @@
                 <p class="card-text offs-text-name text-monospace">Caqui</p>
                 <h5 class="text-success mb-2"><b>R$ 18,99</b> <small> à vista</small></h5>
                 <div class="btn-group" role="group" aria-label="Exemplo básico">
-                    <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2 mr-2">Comprar</button>
+                    <button type="button" class="btn cor-bg-teal text-white w-100 mb-2 mr-2">Comprar</button>
                     <button type="button" class="btn cor-bg-teal font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos5', 'sub');">-</button>
                     <input id="btnMaisVendidos5" type="number" class="form-control text-center w-25" value="1">
                     <button type="button" class="btn cor-bg-teal font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos5', 'sum');">+</button>
@@ -379,7 +379,7 @@
               <p class="card-text offs-text-name text-monospace">Caqui</p>
               <h5 class="text-success mb-2"><b>R$ 18,99</b> <small> à vista</small></h5>
               <div class="btn-group" role="group" aria-label="Exemplo básico">
-                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2 mr-2">Comprar</button>
+                  <button type="button" class="btn cor-bg-teal text-white w-100 mb-2 mr-2">Comprar</button>
                   <button type="button" class="btn cor-bg-teal font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos6', 'sub');">-</button>
                   <input id="btnMaisVendidos6" type="number" class="form-control text-center w-25" value="1">
                   <button type="button" class="btn cor-bg-teal font-weight-bold text-white h-25" onClick="btnCounter('btnMaisVendidos6', 'sum');">+</button>
@@ -404,7 +404,7 @@
                <div class="card-body">
                   <p class="card-text offs-text-name text-monospace">Soja em grãos 500g</p>
                   <h5 class="text-success mb-2"><b>R$ 18,99</b> <small> à vista</small></h5>
-                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100">Comprar</button>
+                  <button type="button" class="btn cor-bg-teal text-white w-100">Comprar</button>             
                 </div>
             </div>
   
@@ -414,7 +414,7 @@
               <div class="card-body">
                   <p class="card-text offs-text-name text-monospace">Aveia em flocos 500g</p>
                   <h5 class="text-success mb-2"><b>R$ 8,89</b> <small> à vista</small></h5>
-                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100">Comprar</button>
+                  <button type="button" class="btn cor-bg-teal text-white w-100">Comprar</button>             
               </div>
             </div>
   
@@ -423,7 +423,7 @@
               <div class="card-body">
                 <p class="card-text offs-text-name text-monospace">Feijão carioca 500g</p>
                 <h5 class="text-success mb-2"><b>R$ 6,39</b> <small> à vista</small></h5>
-                <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100">Comprar</button>
+                <button type="button" class="btn cor-bg-teal text-white w-100">Comprar</button>             
               </div>
             </div>
     
@@ -432,7 +432,7 @@
                 <div class="card-body">
                   <p class="card-text offs-text-name text-monospace">Quinoa 500g</p>
                   <h5 class="text-success mb-2"><b>R$ 5,89</b> <small> à vista</small></h5>
-                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100">Comprar</button>                  
+                  <button type="button" class="btn cor-bg-teal text-white w-100">Comprar</button>                               
                 </div>
             </div>
     
@@ -441,7 +441,7 @@
                 <div class="card-body">
                   <p class="card-text offs-text-name text-monospace">Tapioca 500g</p>
                   <h5 class="text-success mb-2"><b>R$ 3,59</b> <small> à vista</small></h5>
-                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100">Comprar</button>
+                  <button type="button" class="btn cor-bg-teal text-white w-100">Comprar</button>             
                 </div>
             </div>
            </div>
