--- a/frontend/produtos.html
+++ b/frontend/produtos.html
@@ -201,7 +201,7 @@
               <div class="card" style="width: 18rem;">
                 <img class="card-img-top news-img" src="img/itens/laranja.jpg" alt="Livros em promoção"/>
                 <div class="card-body">
-                  <p class="card-text offs-text-name text-monospace">Tomate Cereja Orgânico 180g</p>
+                  <p class="card-text offs-text-name text-monospace">Laranja Orgânica</p>
                   <h5 class="text-success mb-2"><b>R$ 3,59</b> <small> à vista</small></h5>
                   <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100">Comprar</button>
                 </div>
@@ -229,7 +229,7 @@
                 <div class="card" style="width: 18rem;">
                   <img class="card-img-top news-img" src="img/itens/fuba-de-milho.jpg" alt="Livros em promoção"/>
                   <div class="card-body">
-                    <p class="card-text offs-text-name text-monospace">Fuba de milho Orgânico 500g</p>
+                    <p class="card-text offs-text-name text-monospace">Fuba de milho 500g</p>
                     <h5 class="text-success mb-2"><b>R$ 3,59</b> <small> à vista</small></h5>
                     <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100">Comprar</button>
                   </div>
