--- a/frontend/produtos_detalhes.html
+++ b/frontend/produtos_detalhes.html
@@ -126,21 +126,28 @@
            <div class="row" style="margin-right: 30px;">
             <br><p class="card-title forma-texto" >Soja em Grãos Orgânica Certificada rico em proteínas que auxilia na redução dos níveis do colesterol ruim (LDL) e ajuda a elevar os níveis do colesterol bom (HDL). O alimento também possui isoflavonas, substâncias que ajudam a atenuar os efeitos da menopausa e evitar a perda de massa óssea. Além de ser livre de agrotóxicos e livre de transgênicos, seguindo todas as diretrizes da agricultura orgânica.</p>
           </div><hr>
-          <div class="container" style="margin-top: 10px; align-items: center; color: black">
-            <div class="row">
-            <h4 class="card" style="border:solid 0.2px ; border-radius: 5px; margin-left: 200px; padding: 10px">R$: 8,90/UN</h4><br>
-           </div><br>
-           <div class="row d-flex justify-content-center" >
-            <div class="btn-group" role="group" aria-label="Exemplo básico">
-              <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white" onClick="btnCounter('input-count', 'sub');">-</button>
-              <input id="input-count" type="number" value="1" class="form-control text-center w-75">
-              <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white" onClick="btnCounter('input-count', 'sum');">+</button>
+          <div class="container" style="margin-top: 10px; color: black">
+           <div class="row d-flex align-items-center">
+            <div class="col-sm-1"></div>
+            
+            <div class="col-sm-5 mt-2">
+              <h4 class="p-2" style="border:solid 0.2px ; border-radius: 5px">Valor: R$ 3,59</h4>
             </div>
-            </div><br>
-              <div class="container d-flex justify-content-center">
-                <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-75 mb-2">Adicionar ao carrinho</button>
+
+            <div class="col-sm-5">
+              <div class="btn-group" role="group" aria-label="Exemplo básico">
+                <button type="button" class="btn cor-bg-teal font-weight-bold text-white" onClick="btnCounter('input-count', 'sub');">-</button>
+                <input id="input-count" type="number" value="1" class="form-control text-center w-75">
+                <button type="button" class="btn cor-bg-teal font-weight-bold text-white" onClick="btnCounter('input-count', 'sum');">+</button>
               </div>
-           </div>
+            </div>
+
+            <div class="col-sm-1"></div>
+
+          </div>
+          <div class="container d-flex justify-content-center mt-4">
+            <button onclick=location.href="carrinho.html" type="button" class="btn cor-bg-teal font-weight-bold text-white mb-2" style="width: 88%;">Adicionar ao carrinho</button>
+          </div>
         </div>
       </div>
      </div>
@@ -222,7 +229,7 @@
                                 <div class="form-group">
                                   <p class="card-text offs-text-name text-monospace">Castanha do Brasil média 250g</p>
                                   <h5 class="text-success mb-2"><b>R$ 24,99</b><small> à vista</small></h5>
-                                  <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
+                                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Comprar</button>
                                 </div>
                               </div>
 
@@ -235,7 +242,7 @@
                                 <div class="form-group">
                                   <p class="card-text offs-text-name text-monospace">Cravo da Índia 20g</p>
                                   <h5 class="text-success mb-2"><b>R$ 7,90</b><small> à vista</small></h5>
-                                  <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
+                                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Comprar</button>
                                 </div>
                               </div>
                           </div>
@@ -247,7 +254,7 @@
                                 <div class="form-group">
                                   <p class="card-text offs-text-name text-monospace">Farinha de trigo especial 500g</p>
                                   <h5 class="text-success mb-2"><b>R$ 6,90</b><small> à vista</small></h5>
-                                  <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
+                                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Comprar</button>
                                 </div>
                               </div>
                           </div>
@@ -265,7 +272,7 @@
                               <div class="form-group">
                                 <p class="card-text offs-text-name text-monospace">Farinha de trigo integral 500g</p>
                                 <h5 class="text-success mb-2"><b>R$ 6,90</b><small> à vista</small></h5>
-                                <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
+                                <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Comprar</button>
                               </div>
                             </div>
                         </div>
@@ -277,7 +284,7 @@
                             <div class="form-group">
                               <p class="card-text offs-text-name text-monospace">Farinha de mandioca flocada 500g</p>
                               <h5 class="text-success mb-2"><b>R$ 6,90</b><small> à vista</small></h5>
-                              <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
+                              <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Comprar</button>
                             </div>
                           </div>
                       </div>
@@ -289,7 +296,7 @@
                           <div class="form-group">
                             <p class="card-text offs-text-name text-monospace">Fubá de milho 500g</p>
                             <h5 class="text-success mb-2"><b>R$ 6,90</b><small> à vista</small></h5>
-                            <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
+                            <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Comprar</button>
                           </div>
                         </div>
                     </div>
@@ -307,7 +314,7 @@
                                 <div class="form-group">
                                   <p class="card-text offs-text-name text-monospace">Feijão Preto 500g</p>
                                   <h5 class="text-success mb-2"><b>R$ 14,90</b><small> à vista</small></h5>
-                                  <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
+                                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Comprar</button>
                                 </div>
                               </div>
                           </div>
@@ -319,7 +326,7 @@
                               <div class="form-group">
                                 <p class="card-text offs-text-name text-monospace">Feijão Tremoço 500g</p>
                                 <h5 class="text-success mb-2"><b>R$ 8,90</b><small> à vista</small></h5>
-                                <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
+                                <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Comprar</button>
                               </div>
                             </div>
                           </div>
@@ -331,7 +338,7 @@
                                 <div class="form-group">
                                   <p class="card-text offs-text-name text-monospace">Açúcar Mascavo 1kg</p>
                                   <h5 class="text-success mb-2"><b>R$ 17,90</b><small> à vista</small></h5>
-                                  <button type="button" class="btn cor-bg-salmao-dark font-weight-bold text-white w-100 mb-2">Comprar</button>
+                                  <button type="button" class="btn cor-bg-teal font-weight-bold text-white w-100 mb-2">Comprar</button>
                                 </div>
                               </div>
                           </div>
