--- a/frontend/index.html
+++ b/frontend/index.html
@@ -164,7 +164,7 @@
                                             <p class="card-text offs-text-name text-monospace">Caqui Fuyu Orgânico</p>
                                             <div class="card-text text-muted"><s>De: R$ 19,99</s> por:</div>
                                             <h5 class="text-success mb-2"><b>R$ 16,99</b><small> à vista</small></h5>
-                                            <button class="btn cor-bg-teal  text-white w-100 mb-2">Continuar</button>
+                                            <button class="btn cor-bg-teal  text-white w-100 mb-2">Comprar</button>
                                           </div>
                                         </div>
 
@@ -178,7 +178,7 @@
                                             <p class="card-text offs-text-name text-monospace">Cenoura DeBruin Orgânica</p>
                                             <div class="card-text text-muted"><s>De: R$ 4,99</s> por:</div>
                                             <h5 class="text-success mb-2"><b>R$ 3,99</b> <small> à vista</small></h5>
-                                            <button class="btn cor-bg-teal  text-white w-100 mb-2">Continuar</button>
+                                            <button class="btn cor-bg-teal  text-white w-100 mb-2">Comprar</button>
                                           </div>
                                         </div>
                                     </div>
@@ -191,7 +191,7 @@
                                             <p class="card-text offs-text-name text-monospace">Cebola Chooury Orgânica</p>
                                             <div class="card-text text-muted"><s>De: R$ 6,29</s> por:</div>
                                             <h5 class="text-success mb-2"><b>R$ 5,99</b> <small> à vista</small></h5>
-                                            <button class="btn cor-bg-teal  text-white w-100 mb-2">Continuar</button>
+                                            <button class="btn cor-bg-teal  text-white w-100 mb-2">Comprar</button>
                                           </div>
                                         </div>
                                     </div>
@@ -210,7 +210,7 @@
                                           <p class="card-text offs-text-name text-monospace">Pimentão Restib Orgânico</p>
                                             <div class="card-text text-muted"><s>De: R$ 3,59</s> por:</div>
                                             <h5 class="text-success mb-2"><b>R$ 2,99</b> <small> à vista</small></h5>
-                                            <button class="btn cor-bg-teal  text-white w-100 mb-2">Continuar</button>
+                                            <button class="btn cor-bg-teal  text-white w-100 mb-2">Comprar</button>
                                         </div>
                                       </div>
                                   </div>
@@ -223,7 +223,7 @@
                                         <p class="card-text offs-text-name text-monospace">Laranja Umbigo Orgânica</p>
                                             <div class="card-text text-muted"><s>De: R$ 35,99</s> por:</div>
                                             <h5 class="text-success mb-2"><b>R$ 33,99</b> <small> à vista</small></h5>
-                                            <button class="btn cor-bg-teal  text-white w-100 mb-2">Continuar</button>
+                                            <button class="btn cor-bg-teal text-white w-100 mb-2">Comprar</button>
                                       </div>
                                     </div>
                                 </div>
@@ -236,7 +236,7 @@
                                       <p class="card-text offs-text-name text-monospace">Repolho Verde Orgânico</p>
                                       <div class="card-text text-muted"><s>De: R$ 7,99</s> por:</div>
                                       <h5 class="text-success mb-2"><b>R$ 7,35</b> <small> à vista</small></h5>
-                                      <button class="btn cor-bg-teal  text-white w-100 mb-2">Continuar</button>
+                                      <button class="btn cor-bg-teal  text-white w-100 mb-2">Comprar</button>
                                     </div>
                                   </div>
                               </div>
@@ -255,7 +255,7 @@
                                             <p class="card-text offs-text-name text-monospace">Tomate Orgânico</p>
                                             <div class="card-text text-muted"><s>De: R$ 6,99</s> por:</div>
                                             <h5 class="text-success mb-2"><b>R$ R$ 6,29</b> <small> à vista</small></h5>
-                                            <button class="btn cor-bg-teal  text-white w-100 mb-2">Continuar</button>
+                                            <button class="btn cor-bg-teal  text-white w-100 mb-2">Comprar</button>
                                           </div>
                                         </div>
                                     </div>
@@ -268,7 +268,7 @@
                                           <p class="card-text offs-text-name text-monospace">Batata Orgânica</p>
                                           <div class="card-text text-muted"><s>De: R$ 6,99</s> por:</div>
                                           <h5 class="text-success mb-2"><b>R$ R$ 5,69</b> <small> à vista</small></h5>
-                                          <button class="btn cor-bg-teal  text-white w-100 mb-2">Continuar</button>
+                                          <button class="btn cor-bg-teal  text-white w-100 mb-2">Comprar</button>
                                         </div>
                                       </div>
                                     </div>
@@ -281,7 +281,7 @@
                                             <p class="card-text offs-text-name text-monospace">Banana da Prata</p>
                                             <div class="card-text text-muted"><s>De: R$ 9,99</s> por:</div>
                                             <h5 class="text-success mb-2"><b>R$ 8,99</b> <small> à vista</small></h5>
-                                            <button class="btn cor-bg-teal  text-white w-100 mb-2">Continuar</button>
+                                            <button class="btn cor-bg-teal  text-white w-100 mb-2">Comprar</button>
                                           </div>
                                         </div>
                                     </div>
