--- a/frontend/minhas_compras.html
+++ b/frontend/minhas_compras.html
@@ -168,9 +168,9 @@
 
                     </div>
                     <div class="col-md-5">
-                      <a href="avaliar_compras.html" class="btn btn-teal my-account-btn">Avaliar compra</a>
-                      <a href="rastrear_compras.html" class="btn btn-teal my-account-btn">Rastrear compra</a>
-                      <a href="#" class="btn btn-teal my-account-btn">Comprar novamente</a>
+                      <a href="avaliar_compras.html" class="btn btn-teal my-account-btn w-75">Avaliar compra</a>
+                      <a href="rastrear_compras.html" class="btn btn-teal my-account-btn w-75">Rastrear compra</a>
+                      <a href="#" class="btn btn-teal my-account-btn w-75">Comprar novamente</a>
                     </div>
                 </div>
             </div>
@@ -224,9 +224,9 @@
 
                   </div>
                   <div class="col-md-5">
-                    <a href="avaliar_compras.html" class="btn btn-teal my-account-btn">Avaliar compra</a>
-                    <a href="rastrear_compras.html" class="btn btn-teal my-account-btn">Rastrear compra</a>
-                    <a href="#" class="btn btn-teal my-account-btn">Comprar novamente</a>
+                    <a href="avaliar_compras.html" class="btn btn-teal my-account-btn w-75">Avaliar compra</a>
+                    <a href="rastrear_compras.html" class="btn btn-teal my-account-btn w-75">Rastrear compra</a>
+                    <a href="#" class="btn btn-teal my-account-btn w-75">Comprar novamente</a>
                   </div>
               </div>
           </div>
