--- a/frontend/carrinho.html
+++ b/frontend/carrinho.html
@@ -300,7 +300,7 @@
         <div class="col-sm-4"></div>
         
         <div class="col-sm-4">
-          <button type="button" class="btn cor-bg-teal text-white mt-2 w-100">Finalizar compra</button>
+          <button type="button" class="btn cor-bg-teal text-white mt-2 w-100" onclick=location.href="finalizar_compra.html" >Finalizar compra</button>
         </div>
 
         <div class="col-sm-4"></div>
