--- a/frontend/adm_screens/entrega.html
+++ b/frontend/adm_screens/entrega.html
@@ -49,7 +49,7 @@
           <a class="nav-link adm-delivery-icon-right-color" id="profile-tab" data-toggle="tab" href="#entregue" role="tab" aria-controls="entregue" aria-selected="false">Entregue</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link adm-delivery-icon-x-color" id="profile-tab" data-toggle="tab" href="#cancelado" role="tab" aria-controls="cadastro" aria-selected="false">Cancelado</a>
+          <a class="nav-link adm-delivery-icon-x-color" id="profile-tab" href="rastrear_fun.html" aria-controls="cadastro" aria-selected="false">Rastreamento Detalhado</a>
         </li>
       </ul>
       <div class="tab-content" id="myTabContent">
@@ -308,83 +308,6 @@
                   </tr>
                 </tbody>
               </table>
-            </div>
-          </div>
-        </div>
-
-        <!-- CANCELADO -->
-        <div class="tab-pane fade" id="cancelado" role="tabpanel" aria-labelledby="cancelado-tab">
-          <div class="col-md-12 login-form-1">
-            <i class="fa fa-times-circle fa-3x adm-delivery-icon-x-color" style="font-size: 35px;"> Cancelado</i>
-            <div class="row adm-delivery-display">
-              <div class="col-sm-4">
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title text-center adm-delivery-icon-x-color">#31992 - 10/04/2021</h5>
-                    <div class="row">
-                      <div class="col-sm-6">
-                        <p class="card-text txt-color-grey"><i class="fa fa-user" aria-hidden="true"></i> Filipe Silva</p>
-                      </div> 
-                      <div class="col-sm-6">
-                        <p class="card-text txt-color-grey"><i class="fa fa-phone" aria-hidden="true"></i> (71) 98222-2222</p>
-                      </div>
-                    </div>
-                    <p class="card-text txt-color-grey"><i class="fa fa-map-o" aria-hidden="true"></i> Salvador-BA</p>
-                    <a href="#" class="btn btn-teal my-account-btn">Visualizar Informações</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-4">
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title text-center adm-delivery-icon-x-color">#32001 - 10/04/2021</h5>
-                    <div class="row">
-                      <div class="col-sm-6">
-                        <p class="card-text txt-color-grey"><i class="fa fa-user" aria-hidden="true"></i> Filipe Silva</p>
-                      </div> 
-                      <div class="col-sm-6">
-                        <p class="card-text txt-color-grey"><i class="fa fa-phone" aria-hidden="true"></i> (71) 98222-2222</p>
-                      </div>
-                    </div>
-                    <p class="card-text txt-color-grey"><i class="fa fa-map-o" aria-hidden="true"></i> Salvador-BA</p>
-                    <a href="#" class="btn btn-teal my-account-btn">Visualizar Informações</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-4">
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title text-center adm-delivery-icon-x-color">#31992 - 10/04/2021</h5>
-                    <div class="row">
-                      <div class="col-sm-6">
-                        <p class="card-text txt-color-grey"><i class="fa fa-user" aria-hidden="true"></i> Filipe Silva</p>
-                      </div> 
-                      <div class="col-sm-6">
-                        <p class="card-text txt-color-grey"><i class="fa fa-phone" aria-hidden="true"></i> (71) 98222-2222</p>
-                      </div>
-                    </div>
-                    <p class="card-text txt-color-grey"><i class="fa fa-map-o" aria-hidden="true"></i> Salvador-BA</p>
-                    <a href="#" class="btn btn-teal my-account-btn">Visualizar Informações</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-4">
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title text-center adm-delivery-icon-x-color">#31992 - 10/04/2021</h5>
-                    <div class="row">
-                      <div class="col-sm-6">
-                        <p class="card-text txt-color-grey"><i class="fa fa-user" aria-hidden="true"></i> Filipe Silva</p>
-                      </div> 
-                      <div class="col-sm-6">
-                        <p class="card-text txt-color-grey"><i class="fa fa-phone" aria-hidden="true"></i> (71) 98222-2222</p>
-                      </div>
-                    </div>
-                    <p class="card-text txt-color-grey"><i class="fa fa-map-o" aria-hidden="true"></i> Salvador-BA</p>
-                    <a href="#" class="btn btn-teal my-account-btn">Visualizar Informações</a>
-                  </div>
-                </div>
-              </div>
             </div>
           </div>
         </div>
