--- a/frontend/login_cadastro.html
+++ b/frontend/login_cadastro.html
@@ -122,21 +122,21 @@
           <!-- LOGIN FORM -->
           <div class="col-md-6 login-form-1">
             <h3>Faça login na nossa loja</h3>
-            <form>
+            <form method="POST" action="../backend/negocio/pessoa/loginCliente.php">
                 <div class="form-group">
                   <div class="text-field">
-                    <input type="text" id="text_cpf" required>
+                    <input type="text" name="cpfLogin" id="cpf_login">
                     <label>CPF</label>
                   </div>
                 </div>
                 <div class="form-group">
                   <div class="text-field">
-                    <input type="text" id="text_password" required>
+                    <input type="text" name="senhaLogin" id="senha_login">
                     <label>Senha</label>
                   </div>
                 </div>
                 <div class="form-group">
-                    <input type="submit" class="btnSubmit" value="Login" />
+                    <input type="submit" class="btnSubmit" value="Login" onclick="return validarFormLogin()"/>
                 </div>
                 <div class="form-group">
                     <a href="#" class="ForgetPwd">Esqueceu sua senha?</a>
@@ -148,33 +148,33 @@
           <!-- REGISTER FORM -->
           <div class="col-md-6 login-form-1">
             <h3>Cadastre-se na nossa loja</h3>
-            <form>
+            <form method="POST" action="../backend/negocio/pessoa/cadastroCliente.php">
                 <div class="form-group">
                   <div class="text-field">
-                    <input type="text" id="text_cpf" required>
+                    <input type="text" name="cpfCadastro" id="cpf_cadastro">
                     <label>CPF</label>
                   </div>
                 </div>
                 <div class="form-group">
                   <div class="text-field">
-                    <input type="email" id="text_email" required>
+                    <input type="text" name="emailCadastro" id="email_cadastro">
                     <label>E-mail</label>
                   </div>
                 </div>
                 <div class="form-group">
                     <div class="text-field">
-                      <input type="password" id="text_password" required>
+                      <input type="password" name="senhaCadastro" id="senha_cadastro">
                       <label>Senha</label>
                     </div>
                 </div>
                 <div class="form-group">
                   <div class="text-field">
-                    <input type="password" id="text_password" required>
+                    <input type="password" name="confirmarSenhaCadastro" id="confirmar_senha" onblur="validarSenha()">
                     <label>Confirme sua senha</label>
                   </div>
                 </div>
                 <div class="form-group">
-                    <input type="submit" class="btnSubmit" value="Continuar" />
+                    <input type="submit" class="btnSubmit" value="Continuar" onclick="return validarFormCadastro()"/>
                 </div>
             </form>
           </div>
@@ -199,5 +199,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  
+    <script src="js/login_cadastro/index.js"></script>
+
   </body>
 </html>
